# xpython

./: Makefile  Makefile.common.in  README.txt  additionalmodules.py  config.c  config.coff  config.rc  configure  configure.in
libs/: ReportLab_2_0.tgz  freetype-2.3.2.tar.bz2
patches/: Imaging-setup.patch  python-distutils.patch  python-mingw.patch  sqlite-fts2.patch  sqlite-fts3.patch
